<resources>
    <string name="main_blockly">Blockly</string>
    <string name="main_joystick">Joystick</string>
    <string name="main_actions">Actions</string>
    <string name="main_community">Community</string>
    <string name="main_ctl_control_center_title">Control Center</string>
    <string name="main_ctl_fall_down_protection">Turn this on so Alpha will protect itself when falling down.
        Please don’t hold the robot in case of pinching your fingers.</string>
    <string name="main_ctl_ir_sensor">Turn this on so Alpha will say hello if it detects things within 50 cm in front of it.</string>
    <string name="main_ctl_volume">Volume</string>
    <string name="main_ctl_fall_down">Fall-down Protection</string>
    <string name="main_ctl_ir">IR Sensor</string>
    <string name="main_ctl_min">MIN</string>
    <string name="main_ctl_max">MAX</string>
    <string name="main_save">Save</string>
    <string name="main_profile_tab">Profile</string>
    <string name="main_profile_photo_camera">Camera</string>
    <string name="main_profile_photo_albums">Albums</string>
    <string name="main_profile_birthday">Birthday</string>
    <string name="main_profile_gender">Gender</string>
    <string name="main_profile_gender_female">Female</string>
    <string name="main_profile_gender_male">Male</string>
    <string name="main_profile_gender_robot">Robot</string>
    <string name="main_profile_country">Country</string>
    <string name="main_profile_unfilled">Unfilled</string>
    <string name="main_profile_saveFail">Save profile fail!</string>
    <string name="main_profile_quit_edit">Your changes have not been saved, are you sure you want to quit?</string>
    <string name="main_notifications_tab">Notifications</string>
    <string name="main_notifications_nothing">No Notifications Yet</string>
    <string name="main_about_app_tab">About app</string>
    <string name="main_about_app_version">Alpha Ebot V</string>
    <string name="main_about_app_check">Check for Updates</string>
    <string name="main_about_app_check_latest_version_toast">This is the latest version.</string>
    <string name="main_about_app_check_update_dialogue">Are you sure to update to the latest version?</string>
    <string name="main_about_app_check_update_succeed">Update was successful.</string>
    <string name="main_about_app_check_updatet_fail_toast">Failed to update the App.  Please check the network..</string>
    <string name="main_about_app_check_fail_toast">Failed to obtain version information. Please check the network.</string>
    <string name="main_contact_us_tab">Contact us</string>
    <string name="main_contact_us_customer_service">Customer Service Number</string>
    <string name="main_contact_us_telephone">86&#8211;400&#8211;6666&#8211;700</string>
    <string name="main_contact_us_telephone_call">Call \n86&#8211;400&#8211;6666&#8211;700?</string>
    <string name="main_contact_us_email">Email</string>
    <string name="main_contact_us_email_address">ucare@ubtrobot.com</string>
    <string name="main_contact_us_email_send">Send an email to \n ucare@ubtrobot.com?</string>
    <string name="main_contact_us_email_select">select app</string>
    <string name="main_contact_us_website_name">Official website</string>
    <string name="main_contact_us_website_address">www.ubtrobot.com</string>
    <string name="main_contact_us_website_go">Go to www.ubtrobot.com?</string>
    <string name="main_help_feedback_tab">Help &#38; Feedback</string>
    <string name="main_help_feedback_title">FAQ</string>
    <string name="main_help_feedback_details">Details</string>
    <string name="main_help_feedback_give_feedback">Give feedback</string>
    <string name="main_help_feedback_give_feedback_helpful">Helpful</string>
    <string name="main_help_feedback_give_feedback_helpless">Helpless</string>
    <string name="main_help_network_error">Network error. Tap to load again.</string>
    <string name="main_language_tab">Language</string>
    <string name="main_language_content">Current Language: %s</string>
    <string name="main_change_language">Change Language</string>
    <string name="main_language_title">App Language</string>
    <string name="main_language_done">Done</string>
    <string name="main_log_out_tab">Log out</string>
    <string name="main_log_out_button">Log out account</string>
    <string name="main_log_out_dialogue">Are you sure to log out?</string>
    <string name="main_security_center">Security Center</string>
    <string name="main_request_cancellation">Request Cancellation</string>
    <string name="main_security_tip">Are you sure you want to submit Account Cancellation?</string>
    <string name="main_submit">Submit</string>
    <string name="main_input_tip">Please enter your password below to ensure that it is your own operation</string>
    <string name="main_privacy_policy">Privacy Policy</string>
    <string name="main_privacy_cancle">Withdraw Consent</string>
    <string name="main_important_notice">Important Notice</string>
    <string name="main_privacy_msg">Please make sure you have read the Important Notice before submitting the request.

All related content and settings cannot be restored, restrieved or recovered once they are erased.</string>
    <string name="main_guide_robotstatus">Click here to connect to the robot and its Wi-Fi.\nMore information is also available here.</string>
    <string name="main_guide_voicecmd">Click here to know how to talk with Alpha.</string>
    <string name="main_guide_playcenter">A playlist of the robot actions.</string>
    <string name="main_guide_actions">Make up actions for the robot.\nYou can also get a series of lessons here.</string>
    <string name="main_guide_blockly">Program for the robot. You can also get a series of lessons here.</string>
    <string name="main_guide_community">Share your works or communicate with \nother users through the community.</string>
    <string name="main_guide_joystick">A joystick to control the robot.</string>
    <string name="main_guide_got_it">Got it</string>
    <string name="main_guide_skip">Skip</string>
    <string name="main_common_cancel">Cancel</string>
    <string name="main_common_sure">Sure</string>
    <string name="main_common_confirm">Confirm</string>
    <string name="main_common_quit">Quit</string>
    <string-array name="main_vol_labels">
        <item>@string/main_ctl_min</item>
        <item>@string/main_ctl_max</item>
    </string-array>
</resources>